updating sample notebooks

--- a/packages/lib-accusynth/samples/short_example.ipynb
+++ b/packages/lib-accusynth/samples/short_example.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DP Aggregate Seeded Synthesizer"
+    "# Differential Privacy (DP) Aggregate Seeded Synthesizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "from accusynth import DpAggregateSeededParametersBuilder, AccuracyMode, FabricationMode\n",
     "from accusynth import DpAggregatedSeededSynthesizer, Dataset\n",
     "\n",
-    "from utils import gen_dataset"
+    "from utils import gen_data_frame"
    ]
   },
   {
@@ -32,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "number_of_records_to_generate = 6000\n",
     "\n",
-    "sensitive_df = gen_dataset(number_of_records_to_generate)"
+    "sensitive_df = gen_data_frame(number_of_records_to_generate)"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +93,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generating/exporting aggregate data"
+    "## Generating/exporting aggregate data\n",
+    "\n",
+    "This illustrates how to generate aggregates directly from the sensitive and synthetic data, as well as how to access the DP aggregates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -170,29 +172,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.979000</td>\n",
-       "      <td>2.631333</td>\n",
-       "      <td>4.622833</td>\n",
-       "      <td>0.487167</td>\n",
-       "      <td>0.491500</td>\n",
-       "      <td>0.509167</td>\n",
+       "      <td>0.990333</td>\n",
+       "      <td>2.623167</td>\n",
+       "      <td>4.627000</td>\n",
+       "      <td>0.497000</td>\n",
+       "      <td>0.500667</td>\n",
+       "      <td>0.501500</td>\n",
        "      <td>0.495333</td>\n",
-       "      <td>0.498333</td>\n",
-       "      <td>0.499000</td>\n",
-       "      <td>0.502833</td>\n",
+       "      <td>0.491833</td>\n",
+       "      <td>0.498833</td>\n",
+       "      <td>0.506833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.816703</td>\n",
-       "      <td>2.117191</td>\n",
-       "      <td>3.286748</td>\n",
-       "      <td>0.499877</td>\n",
-       "      <td>0.499969</td>\n",
-       "      <td>0.499958</td>\n",
-       "      <td>0.500020</td>\n",
-       "      <td>0.500039</td>\n",
+       "      <td>0.822204</td>\n",
+       "      <td>2.110191</td>\n",
+       "      <td>3.366813</td>\n",
+       "      <td>0.500033</td>\n",
        "      <td>0.500041</td>\n",
-       "      <td>0.500034</td>\n",
+       "      <td>0.500039</td>\n",
+       "      <td>0.500020</td>\n",
+       "      <td>0.499975</td>\n",
+       "      <td>0.500040</td>\n",
+       "      <td>0.499995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -211,7 +213,7 @@
        "      <th>25%</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -226,7 +228,7 @@
        "      <td>3.000000</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -236,8 +238,8 @@
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>2.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>7.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -266,18 +268,18 @@
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      0.979000     2.631333     4.622833     0.487167     0.491500   \n",
-       "std       0.816703     2.117191     3.286748     0.499877     0.499969   \n",
+       "mean      0.990333     2.623167     4.627000     0.497000     0.500667   \n",
+       "std       0.822204     2.110191     3.366813     0.500033     0.500041   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "25%       0.000000     1.000000     2.000000     0.000000     0.000000   \n",
-       "50%       1.000000     3.000000     5.000000     0.000000     0.000000   \n",
-       "75%       2.000000     5.000000     7.000000     1.000000     1.000000   \n",
+       "25%       0.000000     1.000000     1.000000     0.000000     0.000000   \n",
+       "50%       1.000000     3.000000     5.000000     0.000000     1.000000   \n",
+       "75%       2.000000     4.000000     8.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.509167     0.495333     0.498333     0.499000     0.502833  \n",
-       "std       0.499958     0.500020     0.500039     0.500041     0.500034  \n",
+       "mean      0.501500     0.495333     0.491833     0.498833     0.506833  \n",
+       "std       0.500039     0.500020     0.499975     0.500040     0.499995  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "50%       1.000000     0.000000     0.000000     0.000000     1.000000  \n",
@@ -285,7 +287,7 @@
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -335,42 +337,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
-       "      <td>6007.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
+       "      <td>6010.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.909273</td>\n",
-       "      <td>2.310638</td>\n",
-       "      <td>3.982354</td>\n",
-       "      <td>0.463792</td>\n",
-       "      <td>0.471949</td>\n",
-       "      <td>0.493591</td>\n",
-       "      <td>0.476611</td>\n",
-       "      <td>0.486599</td>\n",
-       "      <td>0.483769</td>\n",
-       "      <td>0.491926</td>\n",
+       "      <td>0.920799</td>\n",
+       "      <td>2.291348</td>\n",
+       "      <td>3.926290</td>\n",
+       "      <td>0.475707</td>\n",
+       "      <td>0.482030</td>\n",
+       "      <td>0.494343</td>\n",
+       "      <td>0.486190</td>\n",
+       "      <td>0.476872</td>\n",
+       "      <td>0.483028</td>\n",
+       "      <td>0.488186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.824568</td>\n",
-       "      <td>2.174089</td>\n",
-       "      <td>3.463288</td>\n",
-       "      <td>0.498729</td>\n",
-       "      <td>0.499254</td>\n",
-       "      <td>0.500001</td>\n",
-       "      <td>0.499494</td>\n",
-       "      <td>0.499862</td>\n",
-       "      <td>0.499778</td>\n",
-       "      <td>0.499976</td>\n",
+       "      <td>0.830671</td>\n",
+       "      <td>2.166510</td>\n",
+       "      <td>3.505608</td>\n",
+       "      <td>0.499451</td>\n",
+       "      <td>0.499719</td>\n",
+       "      <td>0.500010</td>\n",
+       "      <td>0.499851</td>\n",
+       "      <td>0.499506</td>\n",
+       "      <td>0.499753</td>\n",
+       "      <td>0.499902</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -402,7 +404,7 @@
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -443,19 +445,19 @@
       ],
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
-       "count  6007.000000  6007.000000  6007.000000  6007.000000  6007.000000   \n",
-       "mean      0.909273     2.310638     3.982354     0.463792     0.471949   \n",
-       "std       0.824568     2.174089     3.463288     0.498729     0.499254   \n",
+       "count  6010.000000  6010.000000  6010.000000  6010.000000  6010.000000   \n",
+       "mean      0.920799     2.291348     3.926290     0.475707     0.482030   \n",
+       "std       0.830671     2.166510     3.505608     0.499451     0.499719   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     4.000000     0.000000     0.000000   \n",
+       "50%       1.000000     2.000000     3.000000     0.000000     0.000000   \n",
        "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
-       "count  6007.000000  6007.000000  6007.000000  6007.000000  6007.000000  \n",
-       "mean      0.493591     0.476611     0.486599     0.483769     0.491926  \n",
-       "std       0.500001     0.499494     0.499862     0.499778     0.499976  \n",
+       "count  6010.000000  6010.000000  6010.000000  6010.000000  6010.000000  \n",
+       "mean      0.494343     0.486190     0.476872     0.483028     0.488186  \n",
+       "std       0.500010     0.499851     0.499506     0.499753     0.499902  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
@@ -463,7 +465,7 @@
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
