--- a/packages/lib-pacsynth/samples/aggregate_seeded_short_example.ipynb
+++ b/packages/lib-pacsynth/samples/aggregate_seeded_short_example.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from accusynth import init_logger, set_number_of_threads\n",
-    "from accusynth import Dataset\n",
-    "from accusynth import DpAggregateSeededParametersBuilder, AccuracyMode, FabricationMode\n",
-    "from accusynth import DpAggregatedSeededSynthesizer, Dataset\n",
+    "from pacsynth import init_logger, set_number_of_threads\n",
+    "from pacsynth import Dataset\n",
+    "from pacsynth import DpAggregateSeededParametersBuilder, AccuracyMode, FabricationMode\n",
+    "from pacsynth import DpAggregatedSeededSynthesizer, Dataset\n",
     "\n",
     "from utils import gen_data_frame"
    ]
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -172,29 +172,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.990333</td>\n",
-       "      <td>2.623167</td>\n",
-       "      <td>4.627000</td>\n",
-       "      <td>0.497000</td>\n",
-       "      <td>0.500667</td>\n",
+       "      <td>1.004500</td>\n",
+       "      <td>2.659000</td>\n",
+       "      <td>4.497000</td>\n",
+       "      <td>0.493000</td>\n",
+       "      <td>0.505667</td>\n",
        "      <td>0.501500</td>\n",
-       "      <td>0.495333</td>\n",
-       "      <td>0.491833</td>\n",
-       "      <td>0.498833</td>\n",
-       "      <td>0.506833</td>\n",
+       "      <td>0.497500</td>\n",
+       "      <td>0.497167</td>\n",
+       "      <td>0.501000</td>\n",
+       "      <td>0.493500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.822204</td>\n",
-       "      <td>2.110191</td>\n",
-       "      <td>3.366813</td>\n",
-       "      <td>0.500033</td>\n",
-       "      <td>0.500041</td>\n",
+       "      <td>0.818082</td>\n",
+       "      <td>2.112217</td>\n",
+       "      <td>3.363858</td>\n",
+       "      <td>0.499993</td>\n",
+       "      <td>0.500010</td>\n",
        "      <td>0.500039</td>\n",
-       "      <td>0.500020</td>\n",
-       "      <td>0.499975</td>\n",
-       "      <td>0.500040</td>\n",
-       "      <td>0.499995</td>\n",
+       "      <td>0.500035</td>\n",
+       "      <td>0.500034</td>\n",
+       "      <td>0.500041</td>\n",
+       "      <td>0.499999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -226,20 +226,20 @@
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>3.000000</td>\n",
-       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>8.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>7.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -268,26 +268,26 @@
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      0.990333     2.623167     4.627000     0.497000     0.500667   \n",
-       "std       0.822204     2.110191     3.366813     0.500033     0.500041   \n",
+       "mean      1.004500     2.659000     4.497000     0.493000     0.505667   \n",
+       "std       0.818082     2.112217     3.363858     0.499993     0.500010   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     1.000000     1.000000     0.000000     0.000000   \n",
-       "50%       1.000000     3.000000     5.000000     0.000000     1.000000   \n",
-       "75%       2.000000     4.000000     8.000000     1.000000     1.000000   \n",
+       "50%       1.000000     3.000000     4.000000     0.000000     1.000000   \n",
+       "75%       2.000000     5.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.501500     0.495333     0.491833     0.498833     0.506833  \n",
-       "std       0.500039     0.500020     0.499975     0.500040     0.499995  \n",
+       "mean      0.501500     0.497500     0.497167     0.501000     0.493500  \n",
+       "std       0.500039     0.500035     0.500034     0.500041     0.499999  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
-       "50%       1.000000     0.000000     0.000000     0.000000     1.000000  \n",
+       "50%       1.000000     0.000000     0.000000     1.000000     0.000000  \n",
        "75%       1.000000     1.000000     1.000000     1.000000     1.000000  \n",
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -337,42 +337,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
-       "      <td>6010.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
+       "      <td>6016.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.920799</td>\n",
-       "      <td>2.291348</td>\n",
-       "      <td>3.926290</td>\n",
-       "      <td>0.475707</td>\n",
-       "      <td>0.482030</td>\n",
-       "      <td>0.494343</td>\n",
-       "      <td>0.486190</td>\n",
-       "      <td>0.476872</td>\n",
-       "      <td>0.483028</td>\n",
-       "      <td>0.488186</td>\n",
+       "      <td>0.938996</td>\n",
+       "      <td>2.319648</td>\n",
+       "      <td>3.820479</td>\n",
+       "      <td>0.481383</td>\n",
+       "      <td>0.486868</td>\n",
+       "      <td>0.480718</td>\n",
+       "      <td>0.466423</td>\n",
+       "      <td>0.471742</td>\n",
+       "      <td>0.480884</td>\n",
+       "      <td>0.475233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.830671</td>\n",
-       "      <td>2.166510</td>\n",
-       "      <td>3.505608</td>\n",
-       "      <td>0.499451</td>\n",
-       "      <td>0.499719</td>\n",
-       "      <td>0.500010</td>\n",
-       "      <td>0.499851</td>\n",
-       "      <td>0.499506</td>\n",
-       "      <td>0.499753</td>\n",
-       "      <td>0.499902</td>\n",
+       "      <td>0.835279</td>\n",
+       "      <td>2.157410</td>\n",
+       "      <td>3.483535</td>\n",
+       "      <td>0.499695</td>\n",
+       "      <td>0.499869</td>\n",
+       "      <td>0.499670</td>\n",
+       "      <td>0.498913</td>\n",
+       "      <td>0.499242</td>\n",
+       "      <td>0.499676</td>\n",
+       "      <td>0.499428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -445,9 +445,9 @@
       ],
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
-       "count  6010.000000  6010.000000  6010.000000  6010.000000  6010.000000   \n",
-       "mean      0.920799     2.291348     3.926290     0.475707     0.482030   \n",
-       "std       0.830671     2.166510     3.505608     0.499451     0.499719   \n",
+       "count  6016.000000  6016.000000  6016.000000  6016.000000  6016.000000   \n",
+       "mean      0.938996     2.319648     3.820479     0.481383     0.486868   \n",
+       "std       0.835279     2.157410     3.483535     0.499695     0.499869   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "50%       1.000000     2.000000     3.000000     0.000000     0.000000   \n",
@@ -455,9 +455,9 @@
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
-       "count  6010.000000  6010.000000  6010.000000  6010.000000  6010.000000  \n",
-       "mean      0.494343     0.486190     0.476872     0.483028     0.488186  \n",
-       "std       0.500010     0.499851     0.499506     0.499753     0.499902  \n",
+       "count  6016.000000  6016.000000  6016.000000  6016.000000  6016.000000  \n",
+       "mean      0.480718     0.466423     0.471742     0.480884     0.475233  \n",
+       "std       0.499670     0.498913     0.499242     0.499676     0.499428  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
@@ -465,7 +465,7 @@
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
