rename prioritize small/large counts to large/short combinations

--- a/packages/lib-pacsynth/samples/dp_aggregate_seeded_short_example.ipynb
+++ b/packages/lib-pacsynth/samples/dp_aggregate_seeded_short_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "builder = DpAggregateSeededParametersBuilder() \\\n",
     "    .reporting_length(reporting_length) \\\n",
     "    .epsilon(0.9) \\\n",
-    "    .accuracy_mode(AccuracyMode.prioritize_large_counts()) \\\n",
+    "    .accuracy_mode(AccuracyMode.prioritize_long_combinations()) \\\n",
     "    .fabrication_mode(FabricationMode.uncontrolled()) \\\n",
     "    .use_synthetic_counts(True)\n",
     "\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -172,29 +172,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.993833</td>\n",
-       "      <td>2.593500</td>\n",
-       "      <td>4.535167</td>\n",
-       "      <td>0.509833</td>\n",
-       "      <td>0.504167</td>\n",
-       "      <td>0.502500</td>\n",
-       "      <td>0.494333</td>\n",
-       "      <td>0.511833</td>\n",
-       "      <td>0.510667</td>\n",
-       "      <td>0.497667</td>\n",
+       "      <td>0.978000</td>\n",
+       "      <td>2.604833</td>\n",
+       "      <td>4.603833</td>\n",
+       "      <td>0.494000</td>\n",
+       "      <td>0.508667</td>\n",
+       "      <td>0.493500</td>\n",
+       "      <td>0.496667</td>\n",
+       "      <td>0.488833</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.503833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.811935</td>\n",
-       "      <td>2.121322</td>\n",
-       "      <td>3.307152</td>\n",
-       "      <td>0.499945</td>\n",
-       "      <td>0.500024</td>\n",
-       "      <td>0.500035</td>\n",
-       "      <td>0.500010</td>\n",
-       "      <td>0.499902</td>\n",
-       "      <td>0.499928</td>\n",
-       "      <td>0.500036</td>\n",
+       "      <td>0.814837</td>\n",
+       "      <td>2.119927</td>\n",
+       "      <td>3.314873</td>\n",
+       "      <td>0.500006</td>\n",
+       "      <td>0.499967</td>\n",
+       "      <td>0.499999</td>\n",
+       "      <td>0.500031</td>\n",
+       "      <td>0.499917</td>\n",
+       "      <td>0.500042</td>\n",
+       "      <td>0.500027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -213,7 +213,7 @@
        "      <th>25%</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -227,18 +227,18 @@
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>5.000000</td>\n",
        "      <td>7.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -268,26 +268,26 @@
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      0.993833     2.593500     4.535167     0.509833     0.504167   \n",
-       "std       0.811935     2.121322     3.307152     0.499945     0.500024   \n",
+       "mean      0.978000     2.604833     4.603833     0.494000     0.508667   \n",
+       "std       0.814837     2.119927     3.314873     0.500006     0.499967   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "25%       0.000000     0.000000     1.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     4.000000     1.000000     1.000000   \n",
-       "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
+       "25%       0.000000     0.000000     2.000000     0.000000     0.000000   \n",
+       "50%       1.000000     2.000000     4.000000     0.000000     1.000000   \n",
+       "75%       2.000000     5.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.502500     0.494333     0.511833     0.510667     0.497667  \n",
-       "std       0.500035     0.500010     0.499902     0.499928     0.500036  \n",
+       "mean      0.493500     0.496667     0.488833     0.500000     0.503833  \n",
+       "std       0.499999     0.500031     0.499917     0.500042     0.500027  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
-       "50%       1.000000     0.000000     1.000000     1.000000     0.000000  \n",
+       "50%       0.000000     0.000000     0.000000     0.500000     1.000000  \n",
        "75%       1.000000     1.000000     1.000000     1.000000     1.000000  \n",
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -337,42 +337,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.0000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>6000.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
+       "      <td>6003.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.954500</td>\n",
-       "      <td>2.331667</td>\n",
-       "      <td>3.972333</td>\n",
-       "      <td>0.482833</td>\n",
-       "      <td>0.484333</td>\n",
-       "      <td>0.4710</td>\n",
-       "      <td>0.478333</td>\n",
-       "      <td>0.482333</td>\n",
-       "      <td>0.489167</td>\n",
-       "      <td>0.476667</td>\n",
+       "      <td>0.917208</td>\n",
+       "      <td>2.305014</td>\n",
+       "      <td>3.958188</td>\n",
+       "      <td>0.481926</td>\n",
+       "      <td>0.489589</td>\n",
+       "      <td>0.467433</td>\n",
+       "      <td>0.488256</td>\n",
+       "      <td>0.471264</td>\n",
+       "      <td>0.488089</td>\n",
+       "      <td>0.485257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.828378</td>\n",
-       "      <td>2.148589</td>\n",
-       "      <td>3.450249</td>\n",
-       "      <td>0.499747</td>\n",
-       "      <td>0.499796</td>\n",
-       "      <td>0.4992</td>\n",
-       "      <td>0.499572</td>\n",
-       "      <td>0.499729</td>\n",
-       "      <td>0.499924</td>\n",
-       "      <td>0.499497</td>\n",
+       "      <td>0.829506</td>\n",
+       "      <td>2.176964</td>\n",
+       "      <td>3.495046</td>\n",
+       "      <td>0.499715</td>\n",
+       "      <td>0.499933</td>\n",
+       "      <td>0.498980</td>\n",
+       "      <td>0.499904</td>\n",
+       "      <td>0.499215</td>\n",
+       "      <td>0.499900</td>\n",
+       "      <td>0.499824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -381,7 +381,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -394,7 +394,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -404,10 +404,10 @@
        "      <th>50%</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -420,7 +420,7 @@
        "      <td>7.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1.0000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -433,7 +433,7 @@
        "      <td>10.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1.0000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -445,27 +445,27 @@
       ],
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
-       "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      0.954500     2.331667     3.972333     0.482833     0.484333   \n",
-       "std       0.828378     2.148589     3.450249     0.499747     0.499796   \n",
+       "count  6003.000000  6003.000000  6003.000000  6003.000000  6003.000000   \n",
+       "mean      0.917208     2.305014     3.958188     0.481926     0.489589   \n",
+       "std       0.829506     2.176964     3.495046     0.499715     0.499933   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     4.000000     0.000000     0.000000   \n",
+       "50%       1.000000     2.000000     3.000000     0.000000     0.000000   \n",
        "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
-       "              H6           H7           H8           H9          H10  \n",
-       "count  6000.0000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.4710     0.478333     0.482333     0.489167     0.476667  \n",
-       "std       0.4992     0.499572     0.499729     0.499924     0.499497  \n",
-       "min       0.0000     0.000000     0.000000     0.000000     0.000000  \n",
-       "25%       0.0000     0.000000     0.000000     0.000000     0.000000  \n",
-       "50%       0.0000     0.000000     0.000000     0.000000     0.000000  \n",
-       "75%       1.0000     1.000000     1.000000     1.000000     1.000000  \n",
-       "max       1.0000     1.000000     1.000000     1.000000     1.000000  "
+       "                H6           H7           H8           H9          H10  \n",
+       "count  6003.000000  6003.000000  6003.000000  6003.000000  6003.000000  \n",
+       "mean      0.467433     0.488256     0.471264     0.488089     0.485257  \n",
+       "std       0.498980     0.499904     0.499215     0.499900     0.499824  \n",
+       "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+       "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+       "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
+       "75%       1.000000     1.000000     1.000000     1.000000     1.000000  \n",
+       "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
