updating pac synth library dependencies and documentation

--- a/packages/lib-pacsynth/samples/dp_aggregate_seeded_short_example.ipynb
+++ b/packages/lib-pacsynth/samples/dp_aggregate_seeded_short_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Differential Privacy (DP) Aggregate Seeded Synthesizer"
+    "# Differential Privacy (DP) Private Aggregate Seeded Synthesizer"
    ]
   },
   {
@@ -172,29 +172,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>1.013000</td>\n",
-       "      <td>2.583833</td>\n",
-       "      <td>4.532500</td>\n",
-       "      <td>0.503167</td>\n",
-       "      <td>0.500167</td>\n",
+       "      <td>1.003000</td>\n",
+       "      <td>2.612500</td>\n",
+       "      <td>4.557333</td>\n",
+       "      <td>0.494000</td>\n",
+       "      <td>0.517833</td>\n",
        "      <td>0.501667</td>\n",
-       "      <td>0.503333</td>\n",
-       "      <td>0.501333</td>\n",
-       "      <td>0.500167</td>\n",
-       "      <td>0.487333</td>\n",
+       "      <td>0.497333</td>\n",
+       "      <td>0.494333</td>\n",
+       "      <td>0.513833</td>\n",
+       "      <td>0.496167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.817073</td>\n",
-       "      <td>2.113855</td>\n",
-       "      <td>3.336435</td>\n",
-       "      <td>0.500032</td>\n",
-       "      <td>0.500042</td>\n",
+       "      <td>0.810206</td>\n",
+       "      <td>2.123228</td>\n",
+       "      <td>3.324338</td>\n",
+       "      <td>0.500006</td>\n",
+       "      <td>0.499724</td>\n",
        "      <td>0.500039</td>\n",
-       "      <td>0.500031</td>\n",
-       "      <td>0.500040</td>\n",
-       "      <td>0.500042</td>\n",
-       "      <td>0.499881</td>\n",
+       "      <td>0.500035</td>\n",
+       "      <td>0.500010</td>\n",
+       "      <td>0.499850</td>\n",
+       "      <td>0.500027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -227,18 +227,18 @@
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>4.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>2.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>5.000000</td>\n",
        "      <td>7.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -268,21 +268,21 @@
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000   \n",
-       "mean      1.013000     2.583833     4.532500     0.503167     0.500167   \n",
-       "std       0.817073     2.113855     3.336435     0.500032     0.500042   \n",
+       "mean      1.003000     2.612500     4.557333     0.494000     0.517833   \n",
+       "std       0.810206     2.123228     3.324338     0.500006     0.499724   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     0.000000     1.000000     0.000000     0.000000   \n",
-       "50%       1.000000     2.000000     4.000000     1.000000     1.000000   \n",
-       "75%       2.000000     4.000000     7.000000     1.000000     1.000000   \n",
+       "50%       1.000000     2.000000     4.000000     0.000000     1.000000   \n",
+       "75%       2.000000     5.000000     7.000000     1.000000     1.000000   \n",
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
        "count  6000.000000  6000.000000  6000.000000  6000.000000  6000.000000  \n",
-       "mean      0.501667     0.503333     0.501333     0.500167     0.487333  \n",
-       "std       0.500039     0.500031     0.500040     0.500042     0.499881  \n",
+       "mean      0.501667     0.497333     0.494333     0.513833     0.496167  \n",
+       "std       0.500039     0.500035     0.500010     0.499850     0.500027  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
-       "50%       1.000000     1.000000     1.000000     1.000000     0.000000  \n",
+       "50%       1.000000     0.000000     0.000000     1.000000     0.000000  \n",
        "75%       1.000000     1.000000     1.000000     1.000000     1.000000  \n",
        "max       1.000000     1.000000     1.000000     1.000000     1.000000  "
       ]
@@ -337,42 +337,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
-       "      <td>6004.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
+       "      <td>6001.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.968188</td>\n",
-       "      <td>2.485676</td>\n",
-       "      <td>4.268488</td>\n",
-       "      <td>0.459694</td>\n",
-       "      <td>0.474517</td>\n",
-       "      <td>0.463857</td>\n",
-       "      <td>0.469687</td>\n",
-       "      <td>0.467522</td>\n",
-       "      <td>0.471186</td>\n",
-       "      <td>0.453198</td>\n",
+       "      <td>0.976671</td>\n",
+       "      <td>2.495084</td>\n",
+       "      <td>4.334778</td>\n",
+       "      <td>0.453091</td>\n",
+       "      <td>0.478587</td>\n",
+       "      <td>0.457424</td>\n",
+       "      <td>0.461256</td>\n",
+       "      <td>0.462923</td>\n",
+       "      <td>0.473254</td>\n",
+       "      <td>0.465756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.828539</td>\n",
-       "      <td>2.136589</td>\n",
-       "      <td>3.390543</td>\n",
-       "      <td>0.498414</td>\n",
-       "      <td>0.499392</td>\n",
-       "      <td>0.498734</td>\n",
-       "      <td>0.499122</td>\n",
-       "      <td>0.498986</td>\n",
-       "      <td>0.499211</td>\n",
-       "      <td>0.497846</td>\n",
+       "      <td>0.815346</td>\n",
+       "      <td>2.140020</td>\n",
+       "      <td>3.378620</td>\n",
+       "      <td>0.497836</td>\n",
+       "      <td>0.499583</td>\n",
+       "      <td>0.498225</td>\n",
+       "      <td>0.498538</td>\n",
+       "      <td>0.498665</td>\n",
+       "      <td>0.499326</td>\n",
+       "      <td>0.498868</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -445,9 +445,9 @@
       ],
       "text/plain": [
        "                H1           H2           H3           H4           H5  \\\n",
-       "count  6004.000000  6004.000000  6004.000000  6004.000000  6004.000000   \n",
-       "mean      0.968188     2.485676     4.268488     0.459694     0.474517   \n",
-       "std       0.828539     2.136589     3.390543     0.498414     0.499392   \n",
+       "count  6001.000000  6001.000000  6001.000000  6001.000000  6001.000000   \n",
+       "mean      0.976671     2.495084     4.334778     0.453091     0.478587   \n",
+       "std       0.815346     2.140020     3.378620     0.497836     0.499583   \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
        "25%       0.000000     0.000000     1.000000     0.000000     0.000000   \n",
        "50%       1.000000     2.000000     4.000000     0.000000     0.000000   \n",
@@ -455,9 +455,9 @@
        "max       2.000000     6.000000    10.000000     1.000000     1.000000   \n",
        "\n",
        "                H6           H7           H8           H9          H10  \n",
-       "count  6004.000000  6004.000000  6004.000000  6004.000000  6004.000000  \n",
-       "mean      0.463857     0.469687     0.467522     0.471186     0.453198  \n",
-       "std       0.498734     0.499122     0.498986     0.499211     0.497846  \n",
+       "count  6001.000000  6001.000000  6001.000000  6001.000000  6001.000000  \n",
+       "mean      0.457424     0.461256     0.462923     0.473254     0.465756  \n",
+       "std       0.498225     0.498538     0.498665     0.499326     0.498868  \n",
        "min       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "25%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
        "50%       0.000000     0.000000     0.000000     0.000000     0.000000  \n",
@@ -477,7 +477,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('.env': venv)",
+   "display_name": "Python 3.10.4 ('.sds-env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -496,7 +496,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "10e5d9e79f2efd74f130f21784517ce1c461836e5fced9f9337e76d5d21bfc93"
+    "hash": "6e516db57ad967ab494bdf699f413a90667b7090ebbf1a23d1813c138c5cb21f"
    }
   }
  },
